# czpeedy

./: .gitignore  LICENSE  README.md  compress.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build_and_upload.yml
czpeedy/: parameter_space.py  runner.py  trial_iterator.py  trial_parameters.py
src/czpeedy/: __init__.py  czpeedy.py  parameter_space.py  runner.py  trial_parameters.py
