[project]
name = "czpeedy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Seth Hinz", email = "sethhinz@me.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "termcolor>=2.4.0",
    "tensorstore>=0.1.63",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
czpeedy = "czpeedy.czpeedy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/czpeedy"]
